--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
-hello
+<!DOCTYPE html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8" />
+        <title></title>
+        <meta name="description" content="" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <link rel="manifest" href="site.webmanifest" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="favicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="favicon/favicon-16x16.png"
+        />
+        <link
+            rel="mask-icon"
+            href="favicon/safari-pinned-tab.svg"
+            color="#5bbad5"
+        />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
+        <!-- Place favicon.ico in the root directory -->
+
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            crossorigin="anonymous"
+        />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+        />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/flickity-fullscreen@1/fullscreen.css"
+        />
+        <link rel="stylesheet" href="css/normalize.css" />
+        <link rel="stylesheet" href="css/main.css" />
+
+        <meta name="theme-color" content="#fafafa" />
+    </head>
+
+    <body>
+        <!--[if IE]>
+            <p class="browserupgrade">
+                You are using an <strong>outdated</strong> browser. Please
+                <a href="https://browsehappy.com/">upgrade your browser</a> to
+                improve your experience and security.
+            </p>
+        <![endif]-->
+
+        <!-- Add your site or application content here -->
+
+        <h1>Revisor-Mo</h1>
+        <h2>Stiller verden til regnskab</h2>
+        <img src="img/dollar.png" />
+        <p>
+            Jeg er kendt som revisionsbranchens Jeppe K. Jeg har hurtigbrillerne
+            på, jeg kan regne brandhurtigt og jeg har store (<u>re</u>)visioner
+            for fremtiden <br /><br />
+            Revisor-Mo har dig 24 timer i døgnet, og husk at jeg altid har gjort
+            det for gaden og ghettoen.<br /><br />
+            <i>"Mo money no problems"</i>
+        </p>
+
+        <div class="globe-container">
+            <img src="img/money.jpg" />
+        </div>
+
+        <div class="testimonials">
+            <p>Kunderne siger:</p>
+            <div class="testimonial">
+                <div class="quote">
+                    <i>
+                        Har du penge du gerne vil gemme. Revisor-Mo skal nok
+                        klare alt det slemme
+                    </i>
+                </div>
+                <div class="quote-author">- Jeppe "Tæppe" Tæppeland</div>
+            </div>
+            <div class="testimonial">
+                <div class="quote">
+                    <i>
+                        Two plus two is four, minus one that's three, quick
+                        maths.
+                    </i>
+                </div>
+                <div class="quote-author">
+                    - Big Shaq
+                </div>
+            </div>
+            <div class="testimonial">
+                <div class="quote">
+                    <i>
+                        Når Mo fixer dit regnskab er der altid plus på kontoen.
+                        Du kan
+                        <u>regne</u> med Mo!
+                    </i>
+                </div>
+                <div class="quote-author">
+                    - Abdul "Benn" Benet
+                </div>
+            </div>
+        </div>
+
+        <div class="portfolio">
+            <p>Se mig i aktion!</p>
+            <div class="carousel">
+                <div class="carousel-img quote-1">
+                    <img src="/img/IMG_3366.JPG" />
+                </div>
+                <div class="carousel-img">
+                    <img src="/img/IMG_3365.JPG" />
+                </div>
+                <div class="carousel-img">
+                    <img src="/img/IMG_3364.JPG" />
+                </div>
+
+                <div class="carousel-img">
+                    <img src="/img/IMG_3367.JPG" />
+                </div>
+                <div class="carousel-img">
+                    <img src="/img/IMG_3368.JPG" />
+                </div>
+            </div>
+        </div>
+
+        <div class="goodbye">
+            Kontakt: Find mig på Baryl
+        </div>
+
+        <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"
+        ></script>
+        <script>
+            window.jQuery ||
+                document.write(
+                    '<script src="js/vendor/jquery-3.4.1.min.js"><\/script>'
+                );
+        </script>
+        <script src="js/plugins.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        <script src="https://unpkg.com/flickity-fullscreen@1/fullscreen.js"></script>
+
+        <script src="js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+        <script>
+            window.ga = function () {
+                ga.q.push(arguments);
+            };
+            ga.q = [];
+            ga.l = +new Date();
+            ga("create", "UA-XXXXX-Y", "auto");
+            ga("set", "transport", "beacon");
+            ga("send", "pageview");
+        </script>
+        <script
+            src="https://www.google-analytics.com/analytics.js"
+            async
+        ></script>
+    </body>
+</html>
